apps/contextsuite/base/contextsuite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contextsuite
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  defaultBackend:
    service:
      name: contextsuite
      port:
        number: 3000
  rules:
    - host: app.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: contextsuite
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.contextsuite.com
      secretName: app-contextsuite-com-tls
